# RocketTX

./: CMakeLists.txt  LICENSE  README.md  app.cpp  app.ui  code of conduct.md  configdialog.cpp  configdialog.ui  main.cpp  settings_manager.cpp
headers/: app.h  configdialog.h  settings_manager.h
scripts/: analyze_data.ipynb  loadcell_clone.py  log_data.py
